Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-9986

ep-engine windows unit tests hit memory corruption ExecutorPool

    XMLWordPrintable

Details

    • Triaged
    • Windows 64-bit
    • June 30 - July 18

    Description

      As reported by Trond on windows, make test failed on windows with a memory corruption in priority_queue
      This happens only during shutdown of ep-engine
      ------------ More details from windows -----------------------------
      Crash happens during shutdown, the thread states are as follows...
      Main thread: ~EventualyPersistentStore() -> stopFlusher() trying to wake Flusher Shard 1 Task and getting blocked on mutex to writer queue
      Snapshot Task Thread: finished VBSnapshot task and trying to addLogEntry blocked on writer queue mutex
      Flusher Shard 1 Task Thread: completeFlush() trying to schedule a VBSnapshot Task blocked on writer queue mutex
      Crashing Thread: Done with Reader Queue and now trying to move the flusher task from the future queue to ready queue.
      The corrupted queue has 3 Flusher Shard Tasks that are sleeping with infinite sleep time and 1 StatSnapshot task set to wake up soon.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            venu Venu Uppalapati (Inactive)
            sundar Sundar Sridharan (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty